--- a/GameTime/pom.xml
+++ b/GameTime/pom.xml
@@ -38,16 +38,43 @@
       </plugin>
     </plugins>
   </build>
+  
+  
   <dependencies>
   	<dependency>
   		<groupId>br.ufes.inf.nemo</groupId>
   		<artifactId>nemo-utils-jee-wp</artifactId>
   		<version>1.1</version>
   	</dependency>
+  	
   	<dependency>
   		<groupId>br.ufes.inf.nemo</groupId>
   		<artifactId>nemo-utils-java</artifactId>
   		<version>1.1</version>
   	</dependency>
+  	
+  	<dependency>
+		<groupId>javax.activation</groupId>
+		<artifactId>activation</artifactId>
+		<version>1.1.1</version>
+	</dependency>
+  	
+  	
+  	<dependency>
+		<groupId>javax.mail</groupId>
+		<artifactId>mail</artifactId>
+		<version>1.4</version>
+	</dependency>
+  	
+  	
+  	<dependency>
+	<groupId>org.apache.jena</groupId>
+	<artifactId>jena-arq</artifactId>
+	<version>2.12.0</version>
+</dependency>
+  	
+  	
+  
+
   </dependencies>
 </project>
